# des_encryption

./: .gitignore  main.py  pyproject.toml  requirement.txt  rxconfig.py
des/pages/: landing.py
exp/: main.ipynb  temp.ipynb
