[project]
name = "exp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=6.30.1",
    "pandas>=2.3.1",
    "psycopg2>=2.9.10",
    "reflex>=0.8.9",
    "simpleai>=0.8.3",
    "sqlalchemy>=2.0.43",
]
